<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_view_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPurpuraBITLAB"
    tools:context="sv.edu.bitlab.desafio.cristian.FormViewFragment">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:src="@drawable/image_bitlab_logo"
        app:layout_constraintBottom_toTopOf="@+id/tvDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescripcion"
        style="@style/AppTheme.styleTextView"
        android:text="@string/tvDescripcion"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalHeader"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/tvNombre"
        style="@style/AppTheme.styleTextView"
        android:text="@string/tvNombre"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalHeader" />

    <EditText
        android:id="@+id/etNombre"
        style="@style/AppTheme.styleEditText"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etNombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <EditText
        android:id="@+id/etCorreoElectronico"
        style="@style/AppTheme.styleEditText"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etCorreoElectronico"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/tvNumeroTelefonico"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvNumeroTelefonico"
        style="@style/AppTheme.styleTextView"
        android:text="@string/tvNumeroTelefonico"
        app:layout_constraintBottom_toTopOf="@+id/etNumeroTelefonico"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/etCorreoElectronico" />

    <EditText
        android:id="@+id/etNumeroTelefonico"
        style="@style/AppTheme.styleEditText"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etNumeroTelefonico"
        android:inputType="phone"
        android:maxLength="8"
        app:layout_constraintBottom_toTopOf="@+id/tvInformacion"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvNumeroTelefonico" />

    <TextView
        android:id="@+id/tvInformacion"
        style="@style/AppTheme.styleTextView"
        android:text="@string/tvInformacion"
        app:layout_constraintBottom_toTopOf="@+id/spinner_Informacion"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/etNumeroTelefonico"
        app:layout_constraintVertical_bias="0.49" />

    <Spinner
        android:id="@+id/spinner_Informacion"
        style="@style/AppTheme.styleSpinner"
        android:entries="@array/spinner_bitlab_information_formview"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvInformacion" />

    <Button
        android:id="@+id/bntEnviar"
        style="@style/AppTheme.styleButtonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEnviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalBottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/textView"
        style="@style/AppTheme.styleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCorreoElectronico"
        app:layout_constraintBottom_toTopOf="@+id/etCorreoElectronico"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />


</androidx.constraintlayout.widget.ConstraintLayout>